--- a/paper.tex
+++ b/paper.tex
@@ -325,7 +325,7 @@ A, E, K, Q, R \\
 \includegraphics[width=0.95\textwidth]{figures/enccomp.eps}
 \caption{Comparison of amino acid encodings with the best sensitivity and the best
 specificity in different regions of signal peptide and mature proteins according to: A) the normalized value of
-property; points represent amino acids; B) frequencies of amino acids in the given region.}
+properties for particular amino acids (points) and B) frequencies of amino acids in the given region.}
 \label{fig:enccomp}
 \end{figure}
 
