--- a/paper.tex
+++ b/paper.tex
@@ -24,7 +24,7 @@
 \keywords{eukaryote; hidden semi-Markov models; n-gram; signal peptide prediction}
 
 \begin{abstract}
-Signal peptides play an essential role in targeting of proteins to endomembrane system and their export outside the cell. The proteins equipped with such peptides are of great importance in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. These peptides may be recognized with adequate accuracy using learning systems. However, they are usually 'black-box' models therefore unable to trace decision rules and identify parameters responsible for the predictions. That is why, we designed a new more universal probabilistic model for eukaryotic signal peptides, which includes knowledge about their organization, amino acid composition and variability. The proposed approach called signalHsmm is based on hidden semi-Markov models (HSMMs) and uses intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. By using the n-grams (k-mers), we showed that the general model can yield not only better results than other software but also more information about features of signal peptides. Our model showed the largest AUC = 0.97 in comparison to other signal peptide predictor even though it was trained on very small data sets. Moreover, it proved to be very stable regardless of types of learning data sets. Therefore, our model does not need to be permanently retrained with the continuous expansion of sequence databases. It should be emphasized, that our model is able to recognize signal peptides from medically significant malaria parasites \textit{Plasmodium} and their relatives more accurately (with AUC = 0.92) than popular programs (0.84). The web-server of signalHsmm is available at \url{http://smorfland.uni.wroc.pl/signalhsmm}.
+Signal peptides play an essential role in targeting of proteins to endomembrane system and their export outside the cell. The proteins equipped with such peptides are of great importance in metabolism, maintenance of tissue structure, immune response and regulation of other organismal functions. These peptides may be recognized with adequate accuracy using learning systems. However, they are usually 'black-box' models therefore unable to trace decision rules and identify parameters responsible for the predictions. That is why, we designed a new more universal probabilistic model for eukaryotic signal peptides, which includes knowledge about their organization, amino acid composition and variability. The proposed approach called signalHsmm is based on hidden semi-Markov models (HSMMs) and uses intrinsic knowledge about signal peptides. The big advantage of the algorithm is its extensibility. By using the n-grams (k-mers), we showed that the general model can yield not only better results than other software but also more information about features of signal peptides. Our model showed the largest AUC = 0.97 in comparison to other signal peptide predictor even though it was trained on very small data sets. Moreover, it proved to be very stable regardless of types of learning data sets. Therefore, our model does not need to be permanently retrained with the continuous expansion of sequence databases. It should be emphasized, that our model is able to recognize signal peptides from medically significant malaria parasites \textit{Plasmodium} and their relatives more accurately (with AUC = 0.93) than popular programs (0.79). The web-server of signalHsmm is available at \url{http://smorfland.uni.wroc.pl/signalhsmm}.
 
 \end{abstract}
 
@@ -51,12 +51,12 @@ Despite the low sequence homology between signal peptides~\citep{1999ladungaphys
 \end{figure}
 
 
-Some data indicate that signal peptides may be universal. It was found, for example, that even bacterial signal peptides targeted correctly transgenic proteins to plant~\citep{2009moellera} or mammalian secretory systems~\citep{2014naganoestablishment}. On the other hand, signal peptides show great variation and the description presented above (Fig. \ref{fig:sparch}) refers to the most ‘typical’ signal peptides. There are  exceptionally long signal peptides, which fulfill more sophisticated roles~\citep{2009hissarchitecture}. The fragment of signal peptide from preprolactin takes part in the regulation of prolactin secretion, whereas signal peptides of MHC class I inhibit activity of NK cells. Signal peptides of viral origin are involved in the immune evasion or viral life cycle~\citep{2000kappposttargeting}. The signal peptide from midkine contributing to the tumor progression contains epitopes recognized by CD4+ T cells~\citep{2013kerzerhothe}. The functional significance of these targeting signals makes that the prediction of signal peptide-containing proteins is also an important step in the drug development~\citep{2005zhangalteration, 2012netoadeimproving, 2010moellerwetmilling}.
+Some data indicate that signal peptides may be universal. It was found, for example, that even bacterial signal peptides targeted correctly transgenic proteins to plant~\citep{2009moellera} or mammalian secretory systems~\citep{2014naganoestablishment}. On the other hand, signal peptides show great variation and the description presented above (Fig. \ref{fig:sparch}) refers to the most ???typical’ signal peptides. There are  exceptionally long signal peptides, which fulfill more sophisticated roles~\citep{2009hissarchitecture}. The fragment of signal peptide from preprolactin takes part in the regulation of prolactin secretion, whereas signal peptides of MHC class I inhibit activity of NK cells. Signal peptides of viral origin are involved in the immune evasion or viral life cycle~\citep{2000kappposttargeting}. The signal peptide from midkine contributing to the tumor progression contains epitopes recognized by CD4+ T cells~\citep{2013kerzerhothe}. The functional significance of these targeting signals makes that the prediction of signal peptide-containing proteins is also an important step in the drug development~\citep{2005zhangalteration, 2012netoadeimproving, 2010moellerwetmilling}.
 
 
 \subsection*{Software predicting signal peptides}
 
-Although many experimental methods determining the subcellular localization of proteins were devised, they are time consuming and laborious. Therefore, signal peptides became the subject of many computational programs to their prediction. Many software incorporates ‘black-box’ models, such as: neural networks~\citep{2011petersensignalp}, support vector machines~\citep{2014zhangprediction}, Bayesian networks~\citep{2012zhengsignalbnf} or k-nearest neighbours~\citep{2007shensignall}. However, these models do not provide direct biological information about organization of signal peptides and are not able to predict properly atypical signal peptides. Although there are programs that do not share the innate flaws of ‘black-box’ models, they also demand an improvement. Some of them are based on position matrices or their variants~\citep{2014zhangprediction, 2004hillerpredisi}. Others (Phobius, Philius and SignalP 3.0) use hidden Markov models (HMMs)~\citep{2004klla, 2008reynoldstransmembrane, 2004bendtsenimproved}, which try to reflect structure of signal peptides regions in their limited probabilistic frameworks. The used HMMs, however, imply a geometric distribution for duration of regions length. We studied the distribution for regions from the first work utilizing HMMs in prediction of signal peptides~\citep{1998nielsenprediction} and found that the length distribution for every region was not geometric (Fig. \ref{fig:reglen}). Moreover, the commonly used rigid scheme of signal peptide's organization (Fig. \ref{fig:sparch}) does not describe extremely long or short peptides. Theoretically, HMMs that describe the atypical signal peptides could be developed to consider also the unusual structures but such probabilistic frameworks have not yet been implemented.
+Although many experimental methods determining the subcellular localization of proteins were devised, they are time consuming and laborious. Therefore, signal peptides became the subject of many computational programs to their prediction. Many software incorporates ???black-box’ models, such as: neural networks~\citep{2011petersensignalp}, support vector machines~\citep{2014zhangprediction}, Bayesian networks~\citep{2012zhengsignalbnf} or k-nearest neighbours~\citep{2007shensignall}. However, these models do not provide direct biological information about organization of signal peptides and are not able to predict properly atypical signal peptides. Although there are programs that do not share the innate flaws of ???black-box’ models, they also demand an improvement. Some of them are based on position matrices or their variants~\citep{2014zhangprediction, 2004hillerpredisi}. Others (Phobius, Philius and SignalP 3.0) use hidden Markov models (HMMs)~\citep{2004klla, 2008reynoldstransmembrane, 2004bendtsenimproved}, which try to reflect structure of signal peptides regions in their limited probabilistic frameworks. The used HMMs, however, imply a geometric distribution for duration of regions length. We studied the distribution for regions from the first work utilizing HMMs in prediction of signal peptides~\citep{1998nielsenprediction} and found that the length distribution for every region was not geometric (Fig. \ref{fig:reglen}). Moreover, the commonly used rigid scheme of signal peptide's organization (Fig. \ref{fig:sparch}) does not describe extremely long or short peptides. Theoretically, HMMs that describe the atypical signal peptides could be developed to consider also the unusual structures but such probabilistic frameworks have not yet been implemented.
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.95\textwidth]{figures/reglen.eps}
@@ -326,20 +326,20 @@ signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.9416 & \textbf{0.9720} & 0.9
 \end{table}
 
 \begin{table}[ht]
-\small
 \centering
-\caption{Comparison of Area Under the Curve, H-measure and Matthews Correlation Coefficient for different classifiers considering only proteins belonging to \textit{Plasmodiidae}.} 
+\caption{Comparison of Area Under the Curve, H-measure and Matthews Correlation Coefficient for different classifiers considering only proteins belonging to Plasmodiidae.} 
 \begin{tabular}{lrrrr}
   \toprule
 Software name & AUC & Sensitivity & Specificity & MCC \\ 
   \midrule
-signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6185 \\ 
-   \rowcolor[gray]{0.85}PrediSi \citep{2004hillerpredisi} & 0.6597 & 0.3725 & \textbf{0.9469} & 0.4028 \\ 
-  Phobius \citep{2004klla} & 0.7963 & 0.6765 & 0.9162 & 0.5991 \\ 
-   \rowcolor[gray]{0.85}Philius \citep{2008reynoldstransmembrane} & 0.7753 & 0.6176 & 0.9330 & 0.5841 \\ 
-  signalHsmm-2010 & \textbf{0.9340} & 0.7941 & 0.8939 & 0.6526 \\ 
-   \rowcolor[gray]{0.85}signalHsmm-1989 & 0.9326 & 0.9216 & 0.8966 & \textbf{0.7531} \\ 
-  signalHsmm-2010 with k-mers & 0.9334 & \textbf{0.9902} & 0.7989 & 0.6767 \\ 
+signalP 4.1 (no tm) \citep{2011petersensignalp} & 0.8356 & 0.7745 & 0.8966 & 0.6420 \\ 
+   \rowcolor[gray]{0.85}signalP 4.1 (tm) \citep{2011petersensignalp} & 0.7928 & 0.6471 & 0.9385 & 0.6185 \\ 
+  PrediSi \citep{2004hillerpredisi} & 0.6597 & 0.3725 & 0.9469 & 0.4028 \\ 
+   \rowcolor[gray]{0.85}Phobius \citep{2004klla} & 0.7963 & 0.6765 & 0.9162 & 0.5991 \\ 
+  Philius \citep{2008reynoldstransmembrane} & 0.7753 & 0.6176 & 0.9330 & 0.5841 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 & \textbf{0.9340} & \textbf{1.0000} & 0.8436 & \textbf{0.7380} \\ 
+  signalHsmm-1989 & 0.9326 & 0.9510 & \textbf{0.8631} & 0.7266 \\ 
+   \rowcolor[gray]{0.85}signalHsmm-2010 with k-mers & 0.9334 & 0.9902 & 0.7989 & 0.6767 \\ 
    \bottomrule
 \end{tabular}
 \label{tab:bench2010plas}
